--- a/StaticAPI/StaticAPI/API.tt
+++ b/StaticAPI/StaticAPI/API.tt
@@ -3,13 +3,19 @@
 <#@ import namespace="System.Linq" #>
 <#@ import namespace="System.Text" #>
 <#@ import namespace="System.Collections.Generic" #>
-
-
-<#foreach(var controller in this.Controllers){#>
-class <#=controller.Name#>{
-<#foreach(var method in GetMethods(controller)){#>
-	<#=method.Name#>(){
+module Server{
+	export module Ajax{
+		export function Post(){
+		}
+		export function Get(){
+		}
 	}
+<#foreach(var controller in this.Controllers){#>
+	export module <#=controller.Name#>{
+<#foreach(var method in GetMethods(controller)){#>
+		export function <#=method.Name#>(){
+		}
 <#}#>	
-}
+	}
 <#}#>
+}
